--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_API_URL_LOCAL = https://localhost:7045/api/trivia/
-REACT_APP_API_URL_PRODUCTION = https://www.trivia-backend.somee.com/api/trivia/
+REACT_APP_API_URL_PRODUCTION = https://triviaappbackend.onrender.com
